--- a/src/assets/css/feed.css
+++ b/src/assets/css/feed.css
@@ -189,7 +189,10 @@ main {
                         }
                         & #paragrafoPost {
                                 width: 100%;
-                                padding: 5px;
+                                padding: 10px;
+                                margin: 5px;
+                                border-radius: 10px;
+                                border: solid 1px black;
 
                         }
                     }
