--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -6,11 +6,129 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+header {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    background-color: #771e76de;
+    top: 0;
 
+    & span {
+        width: 41vw;
+        display: flex;
+        justify-content: center;
+
+        & img {
+            width: 250px;
+            height: 150px;
+        }
+    }
+
+    & .navheader {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5vw;
+        
+
+        & .userDrop {
+            position: relative;
+            display: inline-block;
+
+            & .Userdropbtn {
+                border: white solid 1px;
+                border-radius: 100px;
+                padding: 14px 16px;
+                background-color: inherit;
+            }
+
+            & .userDropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #771e76de;
+                min-width: 150px;
+                border-radius: 10px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+                z-index: 1;
+
+                & a {
+                    color: white;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    display: flex;
+                    justify-self: center;
+                    align-self: center;
+                    height: 45px;
+                    
+                }
+
+                & #btnLogout,
+                #selectPerfil {
+                    color: white;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 8vw;
+                    background-color: inherit;
+                    cursor: pointer;
+                    font-size: 18px;
+                    border: solid 1px white;
+                    border-radius: 30px;
+                    height: 45px;
+
+                }
+
+                & #selectPerfil:hover {
+                    transition: 0.2s;
+                    background-color: #ffffff1e;
+                }
+
+                & #btnLogout:hover {
+                    transition: 0.2s;
+                    background-color: #ffffff1e;
+                }
+            }
+        }
+
+        & .userDropdown-content:hover {
+            background-color: #771e76de;
+        }
+    }
+
+    & .userDrop:hover {
+        & .userDropdown-content {
+            display: block;
+        }
+    }
+
+    & a {
+        text-decoration: none;
+        color: #ffffff;
+        border: white solid 1px;
+        border-radius: 30px;
+        height: 2vw;
+        width: 8vw;
+        justify-content: center;
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    & a:hover {
+        transition: 0.2s;
+        background-color: #ffffff1e;
+    }
+}
 main {
-    border: green solid 1px;
     width: 100%;
-    margin-top: 15vh;
+    margin-top: 18vh;
     display: flex;
 
     & .content1 {
@@ -44,7 +162,6 @@ main {
                 flex-direction: column;
                 align-items: center;
                 height: 33.3%;
-
                 & h2 {
                     font-size: 30px;
                 }
@@ -55,7 +172,11 @@ main {
                     color: #ffffff;
                     background-color: #771e76de;
                     width: 30%;
-                    text-align: center;
+                    font-size: 20px;
+                    height: 2.5vw;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     border-radius: 30px;
                     margin: 0.5vw;
                 }
@@ -69,10 +190,9 @@ main {
             & #anuncievagas {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                padding: 2vw;
                 align-items: center;
                 height: 33.3%;
-
                 & h2 {
                     margin-top: 25px;
 
@@ -97,8 +217,7 @@ main {
             width: 50%;
             display: flex;
             justify-content: center;
-            border: blue solid 1px;
-            height: 41vw;
+            height: 40.5vw;
 
             & img {
                 width: 100%;
